--- a/PocketTools/TrainViewController.xib
+++ b/PocketTools/TrainViewController.xib
@@ -10,6 +10,7 @@
                 <outlet property="endTextField" destination="zxV-3i-EDr" id="zN4-Pi-f64"/>
                 <outlet property="firstHeader" destination="QiO-5o-mpq" id="03j-Uu-Bb5"/>
                 <outlet property="searchBar" destination="SoV-tF-XPb" id="mnd-bm-b9L"/>
+                <outlet property="searchButton" destination="deB-GW-uHu" id="0aW-4j-tvE"/>
                 <outlet property="searchView" destination="feZ-gz-dWF" id="AkX-gZ-hWv"/>
                 <outlet property="startTextField" destination="irJ-Tj-wWw" id="DMH-GP-Ibv"/>
                 <outlet property="tableView" destination="4Fz-MA-EGZ" id="Kfa-7m-IuZ"/>
@@ -43,6 +44,7 @@
                     <rect key="frame" x="71" y="45" width="193" height="30"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
@@ -65,6 +67,7 @@
                     <rect key="frame" x="71" y="86" width="193" height="30"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
@@ -155,7 +158,7 @@
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="299" y="846"/>
+            <point key="canvasLocation" x="299" y="959"/>
         </view>
         <view contentMode="scaleToFill" id="feZ-gz-dWF">
             <rect key="frame" x="0.0" y="0.0" width="320" height="81"/>
