--- a/PocketTools/MoneyTableViewCell.xib
+++ b/PocketTools/MoneyTableViewCell.xib
@@ -45,7 +45,7 @@
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             </tableViewCellContentView>
-            <color key="backgroundColor" red="0.019607843140000001" green="0.1764705882" blue="0.24313725489999999" alpha="1" colorSpace="calibratedRGB"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <connections>
                 <outlet property="flagImageView" destination="pcM-BB-H7C" id="H6f-wX-wJv"/>
                 <outlet property="nameLabel" destination="1Bq-4s-m5w" id="llg-4F-vRR"/>
